--- a/chat.html
+++ b/chat.html
@@ -9,12 +9,12 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f0f0f0;
+        background-color: #111;
     }
     .chat-container {
         max-width: 500px;
         margin: 20px auto;
-        background-color: #fff;
+        background-color: #121;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         overflow: hidden;
@@ -99,7 +99,7 @@
 </style>
 </head>
 <body>
-  <br><br><br><br><br><br>
+<br><br><br><br><br><br>
 <form action="/chat" method="POST">
 <div class="chat-container">
     <div class="chat-header">Chat with our Doctor</div>
